# idea-terminal

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/idea_factory/: __init__.py  cli.py  config.py  display.py  livestream.py  logging_cfg.py  loop.py  models.py  personas.py  pitch.py  preferences.py  prompts.py  reflexion.py  trending.py
src/idea_factory/agents/: base.py  builder.py  challenger.py  claude_check.py  consumer.py  creator.py  distributor.py  judge.py  refiner.py  taste.py
src/idea_factory/db/: connection.py  repository.py
src/idea_factory/llm/: anthropic.py  base.py  factory.py  gemini.py  openai.py
src/idea_factory/web/: __init__.py  app.py  deps.py  pages.py  runner.py  sse.py
src/idea_factory/web/api/: feedback.py  ideas.py  provider.py  runs.py  stats.py
src/idea_factory/web/static/: app.js  style.css
src/idea_factory/web/templates/: base.html  costs.html  dashboard.html  idea_detail.html  run.html
tests/: test_config.py  test_database.py  test_llm_factory.py  test_logging.py  test_models.py  test_preferences.py
