[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-factory"
version = "0.1.0"
description = "Terminal-native startup idea generator with 6-agent evaluation pipeline"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "duckduckgo-search>=6.0.0",
]

[project.scripts]
idea-factory = "idea_factory.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
